--- a/exp_1.7
+++ b/exp_1.7
@@ -1,3 +1,3 @@
 
-COLLABORATION DIAGRAM: 
-This diagram contains the objects and actors. This will be obtained by the completion of the sequence diagram and pressing the F5 key.
+COMPONENT DIAGRAM 
+The component diagram's main purpose is to show the structural relationships between the components of a system. It is represented by boxed figure. Dependencies are represented by communication association.
